<resources>
    <string name="app_name">Auto E</string>
    <string name="the_car_wash_now_comes_to_you">THE CAR WASH NOW COMES TO YOU</string>
    <string name="get_a_professional_detailer_right_at_your_home_or_office_within_3_hours">Get a professional detailer right at your home or office within 3 hours</string>
    <string name="high_quality_before_all">HIGH QUALITY BEFORE ALL</string>
    <string name="onboarding_image_1">onboarding_image_1</string>
    <string name="onboarding_image_2">onboarding_image_2</string>
    <string name="we_only_partner_with_the_best_detailers_our_network_consists_of_highly_trained_insured_and_personally_vetted_professionals">We only partner with the best detailers. Our network consists of highly trained, insured and personally vetted professionals.</string>
    <string name="convenient_secure"><![CDATA[CONVENIENT & SECURE]]></string>
    <string name="save_time_and_focus_on_what_matters_booking_a_service_only_takes_a_few_clicks_and_payment_is_secured_by_our_pci_compliant_platform">Save time and focus on what matters. Booking a service only takes a few clicks and payment is secured by our PCI-compliant platform</string>
    <string name="check_availability_in_your_area">Check availability in your area</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="auto_e_logo">Auto_E_Logo</string>
    <string name="hello">Hello</string>
    <string name="hello_logged_in">Hello,</string>
    <string name="help">Help</string>
    <string name="my_account">My account</string>
    <string name="my_bookings">My bookings</string>
    <string name="make_a_booking">Make a booking</string>
    <string name="home">Home</string>
    <string name="open">Navigation drawer open</string>
    <string name="close">Navigation drawer close</string>
    <string name="account_name">Account Name</string>
    <string name="menu_icon_burger">Menu Icon Burger</string>
    <string name="home_logo">home logo</string>
    <string name="book_icon">book icon</string>
    <string name="make_a_booking_">MAKE A BOOKING</string>
    <string name="knowledge_base">Knowledge base</string>
    <string name="live_chat">Live chat</string>
    <string name="contact_us">Contact us</string>
    <string name="call_us">Call us</string>
    <string name="legal">Legal</string>
    <string name="back_arrow_button">Back Arrow Button</string>
    <string name="select_a_location">Select a location</string>
    <string name="add_a_location">Add a location</string>
    <string name="help_us_find_your_car">Help us find your car!</string>
    <string name="todo">TODO</string>
    <string name="no_location_image">No Location Image</string>
    <string name="main_image_background_image">Main image background image</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="choose_a_label_for_your_location">Choose a label for your location</string>
    <string name="save">Save</string>
    <string name="map">Map</string>
    <string name="label_of_location">Label Of Location</string>
    <string name="address">Address</string>
    <string name="add_a_location_icon">Add A Location Icon</string>
    <string name="next">Next</string>
    <string name="select_a_car">Select a car</string>
    <string name="looks_like_you_haven_t_added_any_cars_yet">Looks like you haven\'t added any cars yet!</string>
    <string name="choose_a_desc_for_your_location">Choose a Description for your location</string>
    <string name="add_a_car">Add a car</string>
    <string name="add_a_car2">Add a car</string>
    <string name="select_your_type_of_car">Select your type of car</string>
    <string name="describe_your_car_make_model_cover_year">Describe your car (make, model, cover, year..)</string>
    <string name="choose_a_label_e_g_personal_work">Choose a label (e.g. Personal, Work, …)</string>
    <string name="rupee_symbol">Rupee symbol</string>
    <string name="_0">0</string>
    <string name="label">Label</string>
    <string name="description">Description</string>
    <string name="add_a_car_icon">Add a car icon</string>
    <string name="add_a_car1">Add a car</string>
    <string name="subtotal">SUBTOTAL</string>

    <string name="account_activity">Account Activity</string>

    <string name="user_account_image">User Account Image</string>
    <string name="name_of_user">Name Of User</string>
    <string name="my_cars">My Cars</string>
    <string name="my_locations">My Locations</string>
    <string name="my_payments">My Payments</string>
    <string name="email_of_user">Email of User</string>
    <string name="edit">Edit</string>
    <string name="select_your_package">Select your package</string>
    <string name="main_plans">Main plans</string>
    <string name="optionals">Optionals</string>
    <string name="radio_button_main_service_item">Radio Button main service item</string>
    <string name="service_name">SERVICE NAME</string>
    <string name="interior_and_exterior">Interior and exterior</string>
    <string name="read_more">Read more</string>
    <string name="check_box_optional_service_item">Check box optional service item</string>
    <string name="rupee_symbol_black_select_your_package">ruppe symbol black select your package</string>
    <string name="the_above_service_includes">The above service includes -</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="select_date">Select date</string>
    <string name="car_type">Car Type:</string>
    <string name="additional_package">Additional Package:</string>
    <string name="package1">Package:</string>
    <string name="mention_a_note_for_our_executive">Mention a note for our executive…</string>
    <string name="mention_a_note_for_executive">Mention a note for executive…</string>
    <string name="label1">label</string>
    <string name="_1234">1234</string>
    <string name="done">Done</string>
</resources>
