<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@color/colorPrimary"
        android:id="@+id/action_bar_account_activity"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/back_button_account_activity"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="40dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:longClickable="true"
            android:contentDescription="@string/back_arrow_button"
            android:src="@drawable/arrow_left"
            />

        <TextView
            android:id="@+id/label_account_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/font_din_bold"
            android:gravity="center_vertical"
            android:text="@string/account_activity"
            android:textColor="@color/white_text_color"
            android:textSize="18sp" />
    </LinearLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:src="@color/colorPrimary"
        android:layout_below="@id/action_bar_account_activity"
        android:id="@+id/account_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/user_account_image"
        />
    <ImageView
        android:contentDescription="@string/edit"
        android:id="@+id/account_image_edit"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/action_bar_account_activity"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


<TextView
    android:textColor="@color/black_000000"
    android:id="@+id/user_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/account_image"
    android:textSize="24sp"
    android:textStyle="bold"
    android:textAlignment="center"
    android:text="@string/name_of_user"
    android:layout_marginTop="10dp"
    android:fontFamily="@font/font_din_bold"
    />
<TextView
    android:id="@+id/user_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/user_name"
    android:textSize="16sp"
    android:textAlignment="center"
    android:text="@string/email_of_user"
    android:layout_marginTop="10dp"
    android:fontFamily="@font/font_din_light"
    />
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:id="@+id/ll_locations"
        android:gravity="center"
        android:layout_below="@id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#D9DBDD" />
        <TextView
            android:padding="15dp"
            android:textSize="15sp"
            android:text="@string/my_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#D9DBDD" />


    </LinearLayout>
<LinearLayout
    android:orientation="vertical"
    android:id="@+id/ll_cars"
        android:gravity="center"
        android:layout_below="@id/ll_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="15dp"
            android:textSize="15sp"
            android:text="@string/my_cars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#D9DBDD" />

</LinearLayout>
<LinearLayout
    android:orientation="vertical"
    android:id="@+id/ll_payments"
        android:gravity="center"
        android:layout_below="@id/ll_cars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="15dp"
            android:textSize="15sp"
            android:text="@string/my_payments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#D9DBDD" />

</LinearLayout>


    <ImageView
        android:id="@+id/logout"
        android:src="@drawable/logout"
        android:layout_marginTop="25dp"
        android:layout_below="@id/ll_payments"
        android:layout_centerHorizontal="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/account_name" />
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        app:lottie_fileName="loader.json"
        app:lottie_autoPlay="true"
        android:layout_marginTop="5dp"
        app:lottie_speed="1.5"
        app:lottie_loop="true"
        android:visibility="visible"
        android:id="@+id/loading_image_animation"
        android:layout_below="@id/logout"/>
</RelativeLayout>