<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorintroscreen1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/launchimage"
        android:contentDescription="@string/auto_e_logo" />

    <LinearLayout
        android:id="@+id/intro_screen_1_log_in"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerInParent="true"
        android:onClick="alreadyHaveAAccount"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:fontFamily="@font/font_din_medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/font_din_medium"
            android:textColor="@color/intro_screen_4_button_background_color"/>
    </LinearLayout>

</RelativeLayout>