<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_car_item"
        android:background="@color/white_text_color"
        android:padding="18dp">

        <ImageView
            android:id="@+id/rupee_symbol_car_item"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/rupee_icon"
            android:contentDescription="@string/rupee_symbol" />

        <TextView
            android:id="@+id/price_of_car_textView_car_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-2dp"
            android:textColor="@color/colorSecondary"
            android:text="@string/_0"
            android:layout_toEndOf="@id/rupee_symbol_car_item"
            android:fontFamily="@font/font_din_medium"
            android:textSize="19sp"/>

        <TextView
            android:id="@+id/label_of_car_car_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_din_bold"
            android:textColor="@color/color_selected_car"
            android:text="@string/label"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:layout_toEndOf="@id/price_of_car_textView_car_item"/>

        <TextView
            android:id="@+id/description_of_car_car_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_din_light"
            android:textColor="@color/color_selected_car"
            android:text="@string/description"
            android:layout_marginTop="4dp"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:layout_toEndOf="@id/price_of_car_textView_car_item"
            android:layout_below="@id/label_of_car_car_item"
            />

        <ImageView
            android:id="@+id/radio_button_car_item"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/unselected_image_view_unchecked"
            android:layout_alignParentEnd="true"
            android:gravity="center"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f0f0f0"
        android:layout_below="@id/layout_car_item"/>

</RelativeLayout>