<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorintroscreen2">

    <TextView
        android:id="@+id/intro_screen_2_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@id/onboarding_image_1"
        android:fontFamily="@font/font_din_regular"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/the_car_wash_now_comes_to_you"
        android:textColor="@color/black_000000"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="362dp"
        android:scaleType="fitXY"
        android:id="@+id/onboarding_image_1"
        android:src="@drawable/onboarding_page1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/onboarding_image_1" />

    <View
        android:layout_width="35dp"
        android:layout_height="2dp"
        android:background="@color/black_000000"
        android:layout_marginTop="18dp"
        android:layout_below="@id/intro_screen_2_text1"
        android:id="@+id/intro_screen_2_black_line"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/intro_screen_2_text2"
        android:layout_below="@id/intro_screen_2_black_line"
        android:layout_marginTop="22dp"
        android:text="@string/get_a_professional_detailer_right_at_your_home_or_office_within_3_hours"
        android:fontFamily="@font/font_din_light"
        android:lineSpacingMultiplier="1.5"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        />
</RelativeLayout>