<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorintroscreen2">

    <TextView
        android:id="@+id/intro_screen_3_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@id/onboarding_image_2"
        android:fontFamily="@font/font_din_regular"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/high_quality_before_all"
        android:textColor="@color/black_000000"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="362dp"
        android:scaleType="fitXY"
        android:id="@+id/onboarding_image_2"
        android:src="@drawable/onboarding_page2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/onboarding_image_2" />

    <View
        android:layout_width="35dp"
        android:layout_height="2dp"
        android:background="@color/black_000000"
        android:layout_marginTop="18dp"
        android:layout_below="@id/intro_screen_3_text1"
        android:id="@+id/intro_screen_3_black_line"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro_screen_3_black_line"
        android:id="@+id/intro_screen_3_text2"
        android:layout_marginTop="22dp"
        android:text="@string/we_only_partner_with_the_best_detailers_our_network_consists_of_highly_trained_insured_and_personally_vetted_professionals"
        android:fontFamily="@font/font_din_light"
        android:lineSpacingMultiplier="1.5"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        />
</RelativeLayout>
