<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorintroscreen2">

    <TextView
        android:id="@+id/intro_screen_4_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@id/onboarding_image_3"
        android:fontFamily="@font/font_din_regular"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/convenient_secure"
        android:textColor="@color/black_000000"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="362dp"
        android:scaleType="fitXY"
        android:id="@+id/onboarding_image_3"
        android:src="@drawable/onboarding_page3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/onboarding_image_2" />

    <View
        android:layout_width="35dp"
        android:layout_height="2dp"
        android:background="@color/black_000000"
        android:layout_marginTop="18dp"
        android:layout_below="@id/intro_screen_4_text1"
        android:id="@+id/intro_screen_4_black_line"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro_screen_4_black_line"
        android:id="@+id/intro_screen_4_text2"
        android:layout_marginTop="22dp"
        android:text="@string/save_time_and_focus_on_what_matters_booking_a_service_only_takes_a_few_clicks_and_payment_is_secured_by_our_pci_compliant_platform"
        android:fontFamily="@font/font_din_light"
        android:lineSpacingMultiplier="1.5"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/intro_screen_4_check_availability_button"
        android:layout_height="47dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/intro_screen_4_button_background_color"
        app:cardElevation="2dp"
        android:elevation="2dp"
        android:onClick="checkAvailabilityButton"
        app:cardCornerRadius="2dp"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/intro_screen_4_button_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/check_availability_in_your_area"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white_text_color"
            android:fontFamily="@font/font_din_medium" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>
